--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mobile Ckeditor</title>
-  <script src="ckeditor/ckeditor.js"></script>
-  <link rel="stylesheet" href="styles.css">
+  <script src="ckeditor/ckeditor.js?v=0.0.1"></script>
+  <link rel="stylesheet" href="styles.css?v=0.0.1">
 </head>
 
 <body>
