Update focus name

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         return window.editor.getData();
     }
 
-    function focus() {
+    function focusEditor() {
         if (!window.editor) return null;
 
         window.editor.editing.view.focus();
