--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     ClassicEditor.create(
         document.querySelector('#editor'),
         {
-            typing: {transformations: {include: ['quotes']}},
+            // typing: {transformations: {include: ['quotes']}},
             mention: {
                 dropdownLimit: Infinity,
                 feeds: [
