--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tictop Editor - Powered by VIG</title>
-  <script src="ckeditor/ckeditor.js?v=0.0.1"></script>
+<!--  <script src="ckeditor/ckeditor.js?v=0.0.1"></script>-->
+  <script src="https://cdn.ckeditor.com/ckeditor5/35.4.0/classic/ckeditor.js"></script>
   <link rel="stylesheet" href="styles.css?v=0.0.1">
 </head>
 
@@ -46,8 +47,7 @@
     function getData() {
         if (!window.editor) return null;
 
-        return window.editor.getData();
-    }
+        return window.editor.getData()    }
 
     function focusEditor() {
         if (!window.editor) return;
