--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tictop Editor - Powered by VIG</title>
-<!--  <script src="ckeditor/ckeditor.js?v=0.0.1"></script>-->
-  <script src="https://cdn.ckeditor.com/ckeditor5/34.2.0/classic/ckeditor.js"></script>
+  <script src="ckeditor/ckeditor.js?v=0.0.1"></script>
   <link rel="stylesheet" href="styles.css?v=0.0.1">
 </head>
 
@@ -61,7 +60,6 @@
     ClassicEditor.create(
         document.querySelector('#editor'),
         {
-            toolbar: [  'redo','undo', 'bold', 'italic', 'numberedList', 'bulletedList' ],
             mention: {
                 dropdownLimit: Infinity,
                 feeds: [
