--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             )
             .map((link) => link?.getAttribute('userid'));
 
+        // Distinct
         mentionUsers = mentionUsers.filter((user, index) => mentionUsers.findIndex((u) => user === u) === index);
 
         let mentionGroups = Array.prototype.filter
@@ -82,7 +83,8 @@
             )
             .map((link) => link?.getAttribute('userid'));
 
-        mentionGroups = mentionGroups.filter((user, index) => mentionGroups.findIndex((u) => user === u) === index);
+        // Distinct
+        mentionGroups = mentionGroups.filter((group, index) => mentionGroups.findIndex((g) => group === g) === index);
 
         return {mentionUsers, mentionGroups};
     }
